--- a/blogr-nextjs-prisma/package.json
+++ b/blogr-nextjs-prisma/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@prisma/client": "5.4.1",
     "next": "12.0.10",
-    "next-auth": "4",
+    "next-auth": "^4",
     "prisma": "^5.4.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0"
   },
