--- a/blogr-nextjs-prisma/package.json
+++ b/blogr-nextjs-prisma/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "5.4.1",
-    "next": "12.0.10",
+    "next": "^12.0.10",
     "next-auth": "^4",
     "prisma": "^5.4.1",
     "react": "^17.0.2",
@@ -22,6 +23,6 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
