--- a/blogr-nextjs-prisma/package.json
+++ b/blogr-nextjs-prisma/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.4.1",
     "next": "^12.0.10",
     "next-auth": "^4",
